make flash now wor k

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,16 @@
+<% flash.each do |type, msg| %>
+  <div id="flash-alert" class="alert alert-danger alert-dismissible fade show fixed-top" role="alert">
+    <div class="container">
+      <%= msg %>
+      <button type="button" class="btn-close close-flash-alert" data-dismiss="alert" aria-label="Close"></button>
+    </div>
+  </div>
+<% end %>
+
 <div id="sign-up">
 <h2 class="text-center margin-bottom-md margin-top-sm">Registreer</h2>
 
-  <%= form_for @user, controller: 'users', action:'create' do |f| %>
+  <%= form_for @user, local: true, data: { turbo: false }, controller: 'users', action:'create' do |f| %>
     <div class="sign-up-section">
       <table class="table borderless">
         <thead>
