--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -208,5 +208,12 @@ h2 {
 }
 
 .alert {
-    margin-left: 52px;
+    margin-left: 82px;
+    margin-right: 30px;
+    margin-top: 30px;
+    padding: 20px;
+}
+
+.label {
+  font-family: 'Flexo-Bold';
 }
