--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,10 +49,10 @@
         <div id="userButtons" class="order-1 col-sm-12 order-sm-1 col-md-6 col-lg-4 order-md-3 text-right">
           <% if current_user %>
             <span class="dropdown">
-              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-              <%= current_user["first_name"] %> <%= current_user["last_name"] %>
-              </button>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+              <div id="user-menu" data-bs-toggle="dropdown" aria-expanded="false">
+              <%= image_tag current_user.avatar %>
+              </div>
+              <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="user-menu">
                 <li><%= link_to "Profile", user_path(current_user), class:"dropdown-item" %></li>
                 <li><a class="dropdown-item" href="/sessions/logout">Logout</a></li>
               </ul>
