--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,6 +51,7 @@
             <span class="dropdown">
               <div id="user-menu" data-bs-toggle="dropdown" aria-expanded="false">
               <%= image_tag current_user.avatar %>
+                <!-- <div id="notification"></div> -->
               </div>
               <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="user-menu">
                 <li><%= link_to "Profile", user_path(current_user), class:"dropdown-item" %></li>
