update new user form with percentage for enterpreneurs and with a climate description for projects

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -171,3 +171,16 @@ $influencers-color-hover: #d689d1;
       overflow: hidden;
   }
 }
+
+.sign-up-section{
+  table {
+    tbody{
+      tr {
+        td{
+          padding: 15px 10px 0px 10px;
+        }
+      }
+    }
+  }
+}
+
