--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -240,3 +240,10 @@ h2 {
   right: 0;
   border: 2px solid #FFF;
 }
+
+.small-description {
+  font-style: italic;
+  font-size: 75%;
+  color: #AAA;
+  line-height: 1.3;
+}
