--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -2,12 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-$enterpreneurs-color: #7997BD;
-$enterpreneurs-color-hover: #89aad6;
-$projects-color: #70bc66;
-$projects-color-hover: #7fd674;
-$influencers-color: #bd79b9;
-$influencers-color-hover: #d689d1;
+$enterpreneurs-color: #66ecef;
+$enterpreneurs-color-hover: #0fbcdc;
+$projects-color: #46b269;
+$projects-color-hover: #6ec570;
+$influencers-color: #b246a9;
+$influencers-color-hover: #c56eb8;
 
 #sign-up {
   max-width: 800px;
