adjusted css to match new layout git push

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,8 +17,8 @@
 @import "bootstrap";
 @import "font-awesome";
 
-$enterpreneurs-color: #039ccd;
-$enterpreneurs-color-hover: #0fbcdc;
+$enterpreneurs-color: #2aadb8;
+$enterpreneurs-color-hover: #5db7b2;
 $projects-color: #46b269;
 $projects-color-hover: #6ec570;
 $influencers-color: #b246a9;
