--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,8 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-$enterpreneurs-color: #2aadb8;
-$enterpreneurs-color-hover: #5db7b2;
+$enterpreneurs-color: #0397ca;
+$enterpreneurs-color-hover: #07abd4;
 $projects-color: #46b269;
 $projects-color-hover: #6ec570;
 $influencers-color: #b246a9;
