--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,7 +44,6 @@ body {
   background-position: center center;
   background-attachment: fixed;
   color: #333;
-  padding: 60px 0 60px 0;
   font-family: "Flexo";
 }
 
@@ -257,4 +256,5 @@ h2 {
   min-height: 100%;
   box-shadow: 0 0 4px 0 #AAA;
   border-radius: 4px;
+  margin: 60px auto 60px auto;
 }
