--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,16 +81,16 @@
         </div>
       </div>
 
+    </div>
 
-      <div class="container">
+
+      <div id="footer" class="container">
         <div class="row">
           <div class="col-12 margin-bottom-lg text-center">
             &copy; 2022 - All 4 1 planet
           </div>
         </div>
       </div>
-
-    </div>
 
   </body>
 </html>
