--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -255,6 +255,12 @@ h2 {
   padding: 30px;
   min-height: 100%;
   box-shadow: 0 0 4px 0 #AAA;
-  border-radius: 4px;
-  margin: 60px auto 60px auto;
+  border-radius: 8px;
+  margin-bottom: 60px;
+  margin-top: 60px;
+}
+
+#footer {
+  color: #FFF;
+  font-family: 'Flexo-Bold';
 }
