--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,12 +43,12 @@
 
       <div class="container margin-bottom-lg margin-top-md">
         <div class="row">
-          <div class="order-2 col-sm-12 order-sm-2 col-md-12 col-lg-4 order-md-1">
+          <div class="order-2 col-sm-12 order-sm-2 col-md-2 col-lg-3 order-md-1">
           </div>
-          <div class="order-3 col-sm-12 order-sm-3 push-sm-12 col-md-6 col-lg-4 order-md-2">
+          <div class="order-3 col-sm-12 order-sm-3 push-sm-12 col-md-8 col-lg-6 order-md-2 text-center">
             <%= link_to image_tag("all41planet_logo.png", id:"logo"), "/" %> <span id="logo-title">ALL FOR ONE PLANET</span>
           </div>
-          <div id="userButtons" class="order-1 col-sm-12 order-sm-1 col-md-6 col-lg-4 order-md-3 text-right">
+          <div id="userButtons" class="order-1 col-sm-12 order-sm-1 col-md-2 col-lg-3 order-md-3 text-right">
             <% if current_user %>
               <span class="dropdown">
                 <div id="user-menu" data-bs-toggle="dropdown" aria-expanded="false">
@@ -86,8 +86,8 @@
 
       <div id="footer" class="container">
         <div class="row">
-          <div class="col-12 margin-bottom-lg text-center">
-            &copy; 2022 - All 4 1 planet
+          <div class="col-12 margin-bottom-xl text-center">
+            &copy;2022 - All 4 1 planet
           </div>
         </div>
       </div>
