change background color nav

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,7 +31,7 @@
       <h3 class="title">Ondernemers</h3>
 
       <div class="body">
-        <span class="strong">All 4 1 planet-ondernemers</span> zijn ondernemers die een klein percentage van hun winst (bij uitkering van dividenden of verkoop van aandelen) afgeven om te investeren in onze All 4 1 planet-projecten. Daarvoor krijgen ze aandacht op ons platform, maar ook de eeuwige dank en de onverwaardelijke steun van onze leden voor terug. Uiteraard hebben ze ook een groot aandeel in het beslissingen in welke projecten er geïnvesteerd wordt.
+        <span class="strong">All 4 1 planet-ondernemers</span> zijn ondernemers die een klein percentage van hun winst (bij uitkering van dividenden of verkoop van aandelen) afgeven om te investeren in onze All 4 1 planet-projecten. Daarvoor krijgen ze aandacht op ons platform, maar ook de eeuwige dank en de onverwaardelijke steun van onze leden voor terug. Uiteraard hebben ze ook een groot aandeel in het beslissen in welke projecten er geïnvesteerd wordt.
       </div>
 
       <div class="link">
