--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -163,7 +163,7 @@ h2 {
 #main-nav {
   position: fixed;
   width: 50px;
-  background-color: #777;
+  background-color: rgba(0,0,0,0.66);
   top: 0;
   left:0;
   bottom: 0;
