--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -98,7 +98,7 @@
               <td><%= c.file_field :company_logo, id: :company_logo, class: "form-control" %></td>
             </tr>
             <tr>
-              <td><%= c.label :percentage %><br /><div class="small-description">Het percentage van dividend en/of meerwaarde op aandelen die je zal doneren aan All41planet</div></td>
+              <td><%= c.label :percentage %><br /><div class="small-description">Het percentage van dividend en/of meerwaarde op aandelen die je wil doneren aan All41planet</div></td>
               <td><%= c.number_field :percentage, id: :company_percentage, value:"2", min:"1", max:"100", step:".1" %>%</td>
             </tr>
             <tr>
