--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,12 +2,14 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-$enterpreneurs-color: #0397ca;
-$enterpreneurs-color-hover: #07abd4;
-$projects-color: #46b269;
-$projects-color-hover: #6ec570;
-$influencers-color: #b246a9;
-$influencers-color-hover: #c56eb8;
+$enterpreneurs-color: #057cbc;
+$enterpreneurs-color-hover: #0e9bcb;
+
+$projects-color: #9cce0b;
+$projects-color-hover: #a7d114;
+
+$influencers-color: #52c8c6;
+$influencers-color-hover: #5ecdca;
 
 .content-wrapper {
   display: flex; /* or inline-flex */
