--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,12 +17,14 @@
 @import "bootstrap";
 @import "font-awesome";
 
-$enterpreneurs-color: #2aadb8;
-$enterpreneurs-color-hover: #5db7b2;
-$projects-color: #46b269;
-$projects-color-hover: #6ec570;
-$influencers-color: #b246a9;
-$influencers-color-hover: #c56eb8;
+$enterpreneurs-color: #057cbc;
+$enterpreneurs-color-hover: #0e9bcb;
+
+$projects-color: #9cce0b;
+$projects-color-hover: #a7d114;
+
+$influencers-color: #52c8c6;
+$influencers-color-hover: #5ecdca;
 
 @font-face {
    font-family: 'Flexo';
