--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -109,7 +109,7 @@ a .project:hover  {
   font-size: 24px;
   text-align: center;
   font-weight: bold;
-  padding: 30px 15px;
+  padding: 0 15px 30px 15px;
 }
 
 #companies {
