--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,6 +47,7 @@ body {
   background-attachment: fixed;
   color: #333;
   font-family: "Flexo";
+  padding-left: 51px;
 }
 
 a {
@@ -256,16 +257,19 @@ h2 {
   background: #F9F9F9;
   padding: 30px;
   box-shadow: 0 0 4px 0 #AAA;
-  border-radius: 8px;
+  @media (min-width: 576px) {
+    border-radius: 8px;
+  }
 }
 
 #content-wrapper {
-  @media (min-width: 600px) {
+  @media (min-width: 576px) {
     margin-bottom: 60px;
     margin-top: 60px;
   }
-  @media (max-width: 600px) {
-    margin-bottom: 0;
+
+  @media (max-width: 576px) {
+    margin-bottom: 30px;
     margin-top: 0;
   }
 }
